# praxis-requirements-analyzer

./: .env.example  .gitignore  LICENSE  README.md  export_notebooks_quick.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
notebooks/: 01_Test_Multi_LLMs.ipynb  02_Get_Neo4j_Schema.ipynb  03_Requirements_Judging.ipynb  04_SiFP_Function_Point_Estimation_Target.ipynb  05_Analysis_Notebook.ipynb  06_Sentence_Transformer_Analysis_Notebook.ipynb  07_Meta_Judge_Analysis_Notebook.ipynb  08_SIFP_Analysis_Notebook.ipynb  09_Traceability_Analysis_Notebook.ipynb  10_Hypothesis_1_Sentence_Transformer_Meta_Judge_Comparison.ipynb  11_Hypothesis_2_Tracability_SiFP.ipynb  12_Hypothesis_3_SiFP_COSMIC_Estimation.ipynb
schema/: neo4j-schema.json
src/: main.py
src/llm/: base_llm.py
src/llm/manager/: __init__.py  llm_manager.py
src/llm/models/: __init__.py
src/llm/models/anthropic/: __init__.py  claude_client.py
src/llm/models/huggingface/: __init__.py  hf_client.py  hf_embeddings_client.py  hf_vllm_client.py
src/llm/models/openai/: __init__.py  openai_client.py
src/models/: __init__.py
src/neo4j/: neo4j_client.py  requirements_client.py  schema_extractor.py
src/praxis_requirements_analyzer/: __init__.py
src/praxis_requirements_analyzer/llm/: __init__.py  base_llm.py
src/praxis_requirements_analyzer/llm/manager/: __init__.py  (+1 more)
src/praxis_requirements_analyzer/models/: requirement.py
src/praxis_requirements_analyzer/neo4j/: __init__.py  neo4j_client.py  requirements_client.py  schema_extractor.py
src/praxis_requirements_analyzer/redis/: redis_client.py
src/praxis_requirements_analyzer/requirements_analyzer/: __init__.py  requirements_prompt_manager.py  requirements_workflow.py  sifp_prompt_manager.py  sifp_workflow.py  workflow_state.py
src/praxis_requirements_analyzer/utils/: timer.py
src/redis/: __init__.py  redis_client.py  redis_schema.py
src/requirements_analyzer/: requirements_prompt_manager.py  requirements_workflow.py  sifp_prompt_manager.py  sifp_workflow.py  workflow_state.py
src/utils/: __init__.py  logger.py  timer.py
utilities/: NOTEBOOK_EXPORT_README.md  export_notebooks.py  legal_landscape.tex.j2  pandas_startup.py  pandas_width_preprocessor.py
(+9 files in other folders)
